<resources>

    <string name="admob_app_id">ca-app-pub-8915706349520340~2056580259</string>
    <string name="admob_interstitial_id_1">ca-app-pub-8915706349520340/7117335248</string>

    <string name="app_name">CAPECO App</string>
    <string name="Developer">Academia by \'Gorillas al Trabajo!\'</string>

    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_setting">Setting</string>
    <string name="title_calendar">Calendar</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="share_message">\nLet me recommend you this link\n\n</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="send_comment">Send Comment</string>
    <string name="remove_to_favorites">Remove to Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="fcm_message">Push Notification</string>
    <string name="title_tag">Tag</string>
    <string name="next">Next</string>
    <string name="wordpress_app">Academia by Gorillas</string>
    <string name="app_description">Information to help you harvest a bright future!</string>


    <string name="next_tag">Next</string>

     <string name="skip">SKIP</string>

    <string name="start">GOT IT</string>

    <string name="slide_1_title">información técnica</string>

    <string name="slide_1_desc">Acceda a información en sistema de Siembra Directa, Trigo , perspectives climáticas y otros.</string>

    <string name="slide_2_title">Estadística</string>

    <string name="slide_2_desc">Acceda a información estadística de exportación de granos.</string>

    <string name="slide_3_title">Capacitaciopnes</string>

    <string name="slide_3_desc">manténgase actualizado sobre capacitaciones que ofrece la cámara.</string>


</resources>