<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_tag"
        android:icon="@drawable/ic_baseline_tag_24"
        android:title="@string/title_tag" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_setting" />

</menu>