<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.academia.gorillas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.academia.gorillas.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.academia.gorillas.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_tag"
        android:name="com.academia.gorillas.ui.tag.TagFragment"
        android:label="@string/title_tag"
        tools:layout="@layout/fragment_tag" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.academia.gorillas.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>